<resources>
    <string name="app_name">IntProj</string>
    <string name="Msg1">Update And Delete Menu</string>
    <string name="Msg2">Enter Menu number</string>
    <string name="Msg3">Edit menu</string>
    <string name="Msg4">Delete menu</string>
    <string name="Msg5">Enter Food Name</string>
    <string name="Msg6">Enter Food Price</string>
    <string name="Msg7">Insert Menu</string>
    <string name="Msg8">Insert </string>
    <string name="Msg9">Check Menu</string>
    <string name="Msg10">Menu Home</string>
    <string name="Msg11">Menu 1</string>
    <string name="Msg13">Menu 2</string>
    <string name="Msg12">Menu 3</string>
    <string name="Msg14">Main Menu </string>
    <string name="himdid">Enter The Menu Number</string>
    <string name="hintfod">Enter The Food Name</string>
    <string name="hintprice">Enter The Price</string>
    <string name="Saveb">Save</string>
    <string name="ShowB">Show</string>
    <string name="UpdateB">Update</string>
    <string name="DeleteB">Delete</string>
    <string name="Edit">EDIT MENU</string>

    <string name="order">*You can do your changes up to 3 days prior to required date only</string>
    <string name="Order1">Order 01</string>
    <string name="Order2">Order 02</string>
    <string name="Order3">Order 03</string>
    <string name="BtnSearch">search</string>
    <string name="BtnSave_changes">Save Changes</string>
    <string name="Customer_name">Kasun Silva</string>
    <string name="Customer_email">silva@gmail.com</string>
    <string name="Customer_contact_number">0711234567</string>
    <string name="Customer_address">55,Park Street,Colombo</string>
    <string name="Customer_plates">150</string>
    <string name="Customer_date">20/07/2020</string>
    <string name="Customer_time">11.00 AM</string>
    <string name="msg">You can cancel free of charge up to 2 days prior to required date. Are you sure cancel this order?</string>
    <string name="Admin_msg">Enter customer name here</string>
    <string name="Admin_msg2">Search Order Details</string>
    <string name="tvName">Name</string>
    <string name="place_order">Place Order</string>
    <string name="names">Name</string>
    <string name="emails">Email</string>
    <string name="times">Time</string>
    <string name="contact_numbers">Contact Number</string>
    <string name="menu_numbers">Menu Number</string>
    <string name="dates">Date</string>
    <string name="number_of_plates">Number of plates</string>
    <string name="addresses">Address</string>
    <string name="update_order">Update order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="recent">Recent :</string>
    <string name="order_now">Order Now !</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="menu_number">Menu Number</string>
    <string name="number_plates">Number Of Plates</string>
    <string name="date">Date (dd/mm/yyyy)</string>
    <string name="time">Time (00:00 AM/PM)</string>
    <string name="update_your_order">Update Your Order Here</string>
    <string name="search_food">Search food</string>
    <string name="hintname">Enter Name</string>
    <string name="hintLName">Enter Name</string>
    <string name="hintemail">Enter Email</string>
    <string name="hintpassword">Enter Password</string>
    <string name="hintenterPassword">Enter Password</string>
    <string name="registerB">REGISTER</string>
    <string name="hintfname">Enter Name</string>
    <string name="hintfbemail">Enter Email</string>
    <string name="hintbdfeedB">Enter Your Feedback</string>
    <string name="sendb">Send</string>
    <string name="UpdateAB">Update</string>
    <string name="DeleteBA">Delete</string>
    <string name="btnPay1">Pay</string>
    <string name="tvDeleteMsg">Are you sure you want to delete record</string>
    <string name="btnPay">Pay Now</string>
    <string name="btnDeleteR">Delete</string>
    <string name="tvRecent2">Recent</string>
</resources>