<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background = "@drawable/gradiend_background"
    tools:context=".MainActivity4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="#fece2f"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="271dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/bungee"
            android:text="Edit Menu "
            android:textColor="#000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="129dp"
            android:layout_height="105dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="342dp"
            android:contentDescription="TODO"
            android:src="@drawable/meal" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        app:srcCompat="@drawable/acd" />

    <EditText
        android:id="@+id/edmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/himdid"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintfod"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintprice"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/Saveb"
            android:textColor="?android:attr/colorForeground"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnshow"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ShowB"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:background="@drawable/custom_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UpdateB"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:background="@drawable/custom_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DeleteB"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>