<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".orders">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="#fece2f"
        android:padding="20dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="129dp"
        android:layout_height="105dp"
        android:contentDescription="TODO"
        android:src="@drawable/meal" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tvRecent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#E3D9D9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:text="02/10/2020"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnUpdate3"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:background="#000"
            android:text="@string/update_order"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDelete3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/cancel_order" />

    </LinearLayout>




</LinearLayout>