<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orderUpdate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:background="#fece2f"
        android:padding="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-46dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="129dp"
            android:layout_height="105dp"
            android:contentDescription="TODO"
            android:src="@drawable/meal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="241dp"
            android:layout_height="106dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/bungee"
            android:text="@string/update_your_order"
            android:textColor="#000"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="359dp"
        android:layout_height="380dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName2"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEmail2"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact_number"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.175"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.249" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.239" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAddress2"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextMultiLineAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMenu2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_number"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.404" />

            <EditText
                android:id="@+id/editTextNumberMenu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlates2"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_of_plates"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.169"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />

            <EditText
                android:id="@+id/editTextNumberPlates2"
                android:layout_width="204dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate2"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.131"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.551" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTime2"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.632" />

            <EditText
                android:id="@+id/editTextTime2"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:text="@string/order"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918">

        <Button
            android:id="@+id/btnPre"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="#000"
            android:text="Preview Data"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:onClick="displayToast"
            android:text="@string/BtnSave_changes"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            tools:ignore="OnClick" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>